--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
 	</head>
 	<body>
 		<main class="page">
-			<section class="banner isAnimate">
-				<div class="banner__content">
-					<div class="banner__content_bg"></div>
-					<div class="banner__content-text">
-						<div class="page__logo"><img class="page__img" src="assets/img/logo.png" alt=""></div>
-						<h1 class="page__title-h1">The Leading Facility Service Provider</h1>
-						<p class="page__text">for all of your electrical, lighting, HVAC, plumbing, distribution and contractor service needs.</p>
-					</div>
-				</div>
-				<div class="banner__bg"></div>
-			</section>
+			<section class="banner"></section>
 		</main>
 		<script src="js/debug-grid-create.js"></script>
 		<script src="js/main.js"></script>
