--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</div>
 				</div>
 				<div class="banner__bg">
-					<div class="page__img"><img src="/assets/img/img-banner.png" alt=""></div>
+					<div class="page__img"><img src="assets/img/img-banner.png" alt=""></div>
 				</div>
 			</section>
 			<section class="about isAnimate">
